# sqlalchemy-model-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: issue-manager.yml  lint.yml  publish.yml  test.yml
scripts/: lint.sh  test.sh
sqlalchemy_model_builder/: __init__.py  _models.py  exceptions.py  model_builder.py  models.py  random_builder.py
tests/: test_fastapi_admin.py  test_model_builder_primitive_types.py  test_model_builder_relationships.py  test_model_builder_types.py  test_random_builder.py  test_sqlalchemy_builder.py
