[tool.poetry]
name = "sqlalchemy-model-builder"
version = "0.0.5"
description = "SQLAlchemy Model Builder"
authors = ["Amin Alaee <mohammadamin.alaee@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aminalaee/sqlalchemy-model-builder"

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.5"
mypy = "^0.812"
pylint = "^2.8.3"
isort = "^5.8.0"
sqlalchemy-stubs = "^0.4"

[tool.pylint.message_control]
disable = """
    invalid-name,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    no-self-use,
    too-few-public-methods,
"""

[tool.pylint.format]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
