[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlalchemy-model-builder"
description = "SQLAlchemy Model Builder"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["sqlalchemy", "testing"]
authors = [
  { name = "Amin Alaee", email = "me@aminalaee.dev" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
]
dependencies = [
  "sqlalchemy >=1.4",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/aminalaee/sqlalchemy-model-builder"
Issues = "https://github.com/aminalaee/sqlalchemy-model-builder/issues"
Source = "https://github.com/aminalaee/sqlalchemy-model-builder"

[tool.hatch.version]
path = "sqlalchemy_model_builder/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "black==23.1.0",
  "build==0.9.0",
  "coverage==7.2.2",
  "isort==5.11.5",
  "mypy==1.1.1",
  "pytest==7.2.2",
  "ruff==0.0.256",
]

[tool.hatch.envs.default.scripts]
cov = [
  "coverage report --show-missing --skip-covered --fail-under=100",
  "coverage xml",
]
check = [
  "ruff .",
  "isort --check --project=sqlalchemy_model_builder .",
  "black --check .",
  "mypy sqlalchemy_model_builder",
]
format = [
  "isort --project=sqlalchemy_model_builder .",
  "black .",
  "ruff --fix .",
]
test = "coverage run -m pytest {args}"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
no_implicit_optional = true

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.coverage.run]
source_pkgs = [
  "sqlalchemy_model_builder",
  "tests",
]
